--- a/src/index.njk
+++ b/src/index.njk
@@ -20,7 +20,7 @@
                     You should be doing better...
                     <br>A life with more financial security where you can spend more time doing your favorite
                     things...
-                    <br> You dont have to do this alone.
+                    <br><br> You dont have to do this alone.
                     <br><br>
                     We fix that.
                 </p>
