--- a/src/about.njk
+++ b/src/about.njk
@@ -11,12 +11,13 @@
     <div class="hero-card text-start">
         <h1 class="display-5 fw-bold mb-1 pt-3 pb-4 p-2">
             <!-- Tired of Managing Your Company’s Finances alone? -->
-            Should be doing better...
-            <br><br>
-            Why aren't you more financially secure and spending more time doing your favorite things?
+            You Should be doing better...
+            <!--<br><br>-->
+            <!--Why aren't you more financially secure and spending more time doing your favorite things?-->
         </h1>
 
         <p class="text-light mb-3 pt-4 pb-5 p-2">
+            Why aren't you more financially secure and spending more time doing your favorite things?<br><br>
             At Mojo CFO, we're your modern finance and accounting partner with the expertise necessary to
             set you up for success.
             <!-- At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to -->
