--- a/src/about.njk
+++ b/src/about.njk
@@ -18,7 +18,7 @@
 
         <p class="text-light mb-3 pt-4 pb-5 p-2">
             Why aren't you more financially secure and spending more time doing your favorite things?<br><br>
-            At Mojo CFO, we're your modern finance and accounting partner with the expertise necessary to
+            At Mojo CFO, we are your modern finance and accounting partner with the expertise necessary to
             set you up for success.
             <!-- At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to -->
             <!-- help. -->
@@ -46,8 +46,8 @@
             </div>
 
             <div class="text-section">
-                As President of Mojo CFO, Joe leads a team of Fractional CFOs to support
-                value-oriented leaders across businesses and organizations in America.
+                As President of Mojo CFO, Joe leads a team of Fractional CFOs, as well as other finance and accounting
+                professionals to support value-oriented leaders across businesses and organizations in America.
                 <br><br>
                 Raised in a rural town in Western Maryland on a hundred-plus acre Black
                 Angus
