--- a/src/faq.njk
+++ b/src/faq.njk
@@ -63,7 +63,7 @@
                 <div id="faqCollapseTwo" class="accordion-collapse collapse" aria-labelledby="faqHeadingTwo"
                     data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
-                        Our CFO Services include:
+                        Our CFO services include:
                         <ul>
                             <li><strong>Traditional Accounting Support:</strong> Monthly financial reporting and payroll
                                 processing to ensure your organization operates effectively.</li>
@@ -71,7 +71,7 @@
                                 financial plans aligned with your organization's goals.</li>
                             <li><strong>Budgeting & Forecasting:</strong> Creating detailed
                                 budgets and financial forecasts to guide
-                                decision-making.</li>
+                                decision making.</li>
                             <li><strong>Cash Flow Management:</strong> Optimizing cash flow
                                 to ensure liquidity and operational stability.</li>
                             <li><strong>Financial Reporting:</strong> Timely preparation of customized
