--- a/src/about.njk
+++ b/src/about.njk
@@ -8,30 +8,51 @@
 {% block content %}
 <div class="hero">
     <!-- Hero card content -->
-    <div class="hero-card text-start">
-        <h1 class="display-5 fw-bold mb-1 pt-3 pb-4 p-2">
-            <!-- Tired of Managing Your Company’s Finances alone? -->
+    <div class="hero-card">
+        <h1 class="display-5 fw-bold mb-3">
             You Should be doing better...
-            <!--<br><br>-->
-            <!--Why aren't you more financially secure and spending more time doing your favorite things?-->
         </h1>
-
-        <p class="text-light mb-3 pt-4 pb-5 p-2">
+        <p class="text-light mb-3">
             Why aren't you more financially secure and spending more time doing your favorite things?<br><br>
-            At Mojo CFO, we are your modern finance and accounting partner with the expertise necessary to
+            At Mojo CFO, we are your modern finance and accounting partner with the expertise<br>necessary to
             set you up for success.
-            <!-- At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to -->
-            <!-- help. -->
         </p>
-
-        <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-95"
-            style="font-size:1.25rem;">
-            BOOK A CALL NOW TO LEARN MORE
-            <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
-                class="ps-2" alt=">">
-        </a>
+        <div>
+            <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn py-2 w-lg-50 w-50"
+                style="font-size:1.25rem;">
+                <span class="me-0 px-0">BOOK A CALL NOW TO LEARN MORE</span>
+                <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
+                    class="ps-1">
+            </a>
+        </div>
     </div>
 </div>
+<!--<div class="hero">-->
+<!--    <!-- Hero card content -->
+<!--    <div class="hero-card text-start">-->
+<!--        <h1 class="display-5 fw-bold mb-1 pt-3 pb-4 p-2">-->
+<!--            <!-- Tired of Managing Your Company’s Finances alone? -->
+<!--            You Should be doing better...-->
+<!--            <!--<br><br>-->
+<!--            <!--Why aren't you more financially secure and spending more time doing your favorite things?-->
+<!--        </h1>-->
+<!---->
+<!--        <p class="text-light mb-3 pt-4 pb-5 p-2">-->
+<!--            Why aren't you more financially secure and spending more time doing your favorite things?<br><br>-->
+<!--            At Mojo CFO, we are your modern finance and accounting partner with the expertise necessary to-->
+<!--            set you up for success.-->
+<!--            <!-- At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to -->
+<!--            <!-- help. -->
+<!--        </p>-->
+<!---->
+<!--        <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-95"-->
+<!--            style="font-size:1.25rem;">-->
+<!--            BOOK A CALL NOW TO LEARN MORE-->
+<!--            <img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"-->
+<!--                class="ps-2" alt=">">-->
+<!--        </a>-->
+<!--    </div>-->
+<!--</div>-->
 
 <section id="team" class="py-5">
     <div class="container px-5 photo-text-container">
