--- a/src/contact.njk
+++ b/src/contact.njk
@@ -33,7 +33,7 @@
                     <!-- We’d love to hear from you! Whether you have questions about our services, need assistance, or are -->
                     <!-- ready to schedule a consultation, our team is here to help. -->
                     We'd love to hear from you! Whether you need a quick favor, you have questions about our services,
-                    need ongoing assistance or simply want to schedule a consultation, our team is here to help.
+                    need ongoing assistance or simply want to schedule a consultation our team is here to help.
                 </p>
                 <p class="mb-4">
                     <!-- Fill out the form below, and one of our experts will get back to you promptly. -->
