general cleanup and hero section uniformity improvement

--- a/src/about.njk
+++ b/src/about.njk
@@ -9,12 +9,12 @@
 <div class="hero">
     <!-- Hero card content -->
     <div class="hero-card">
-        <h1 class="display-5 fw-bold mb-3">
+        <h1 class="display-5 fw-bold mb-4">
             You Should be doing better...
         </h1>
         <p class="text-light mb-3">
             Why aren't you more financially secure and spending more time doing your favorite things?<br><br>
-            At Mojo CFO, we are your modern finance and accounting partner with the expertise<br>necessary to
+            At Mojo CFO, we are your modern finance and accounting partner with the expertise necessary to
             set you up for success.
         </p>
         <div>
