--- a/src/assets/css/faq.css
+++ b/src/assets/css/faq.css
@@ -7,13 +7,11 @@
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
         url("/assets/images/faq_hero.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 70vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
+}
+
+.hero .hero-card {
+    width: 100%;
+    padding-right: 20%;
 }
 
 .hero-btn {
@@ -25,13 +23,6 @@
 /* ====== NEW DARK-MODE FAQ STYLES ====== */
 .faq-section {
     background-color: #000;
-    color: #fff;
-}
-
-.faq-heading {
-    font-size: 4.5rem;
-    /* bumped up */
-    padding-bottom: 1rem;
     color: #fff;
 }
 
@@ -105,6 +96,6 @@
 
     .hero-btn {
         margin-left: 0rem !important;
-        font-size: 1.2rem !important;
-        width: 90% !important;
+        font-size: 1rem !important;
+        width: 95% !important;
     }
