--- a/src/faq.njk
+++ b/src/faq.njk
@@ -13,7 +13,7 @@
             Frequently Asked Questions
         </h1>
         <p class="text-light mb-3">
-            Here is a little more about how we operate. Got a more specific question? Feel free to get in
+            Here is a little more about how we operate. Got a more specific question?<br> Feel free to get in
             touch.
         </p>
         <div>
