--- a/src/about.njk
+++ b/src/about.njk
@@ -174,7 +174,7 @@
             <!-- business’ goals. Whether you are looking for financial insights, cash flow management, or growth financing, -->
             <!-- our team is here to help. -->
             Schedule a free consultation with Mojo CFO today and take the first step towards doing better...<br>
-            A life with more financial security and more free time to do your favourite things.<br>
+            A life with more financial security and more free time to do your favorite things.<br>
             For one flat rate, we are here to help.
         </p>
         <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" target="_blank" class="btn btn-primary btn-lg cta-btn">
