--- a/src/index.njk
+++ b/src/index.njk
@@ -13,16 +13,15 @@
     <div class="container">
         <div class="row justify-content-md-center justify-content-lg-start">
             <div class="col-12 col-md-8 col-lg-6 hero-card text-md-start">
-                <h1 class="display-5 fw-bold mb-5">
+                <h1 class="display-5 fw-bold mb-4">
                     financial growth and stability.
                 </h1>
                 <p class="text-light mb-5">
                     You should be doing better...
-                    <br>A life with more financial security where you can spend more time doing your favorite
+                    A life with more financial security where you can spend more time doing your favorite
                     things...
-                    <br><br> You dont have to do this alone.
-                    <br><br>
-                    We fix that.
+                    <br><br>You don't have to do this alone.
+                    <br>We fix that.
                 </p>
                 <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75"
                     style="font-size:1.25rem;">
@@ -39,7 +38,7 @@
 <section class="strategy-section d-flex align-items-center text-center text-dark py-5">
     <div class="container">
         <h2 class="fw-bold text-dark mb-2">
-            NUMBER ONE FINANCE AND ACCOUNTING SOLUTIONS EXPERTS
+            #1 FINANCE &amp ACCOUNTING SOLUTIONS EXPERTS
         </h2>
         <p class="h5 fw-semibold mb-4">
             Mojo CFO provides expertise to American organizations generating $1 million to $100 million in annual
