--- a/src/pricing.njk
+++ b/src/pricing.njk
@@ -136,6 +136,12 @@
                         <li class="feature-item mb-2 d-flex align-items-start gap-2">
                             <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
                             <span>
+                                Bookkeeping
+                            </span>
+                        </li>
+                        <li class="feature-item mb-2 d-flex align-items-start gap-2">
+                            <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
+                            <span>
                                 Payroll processing
                             </span>
                         </li>
@@ -205,6 +211,12 @@
                             <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
                             <span>
                                 Everything in Essential
+                            </span>
+                        </li>
+                        <li class="feature-item mb-2 d-flex align-items-start gap-2">
+                            <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
+                            <span>
+                                AR & AP management
                             </span>
                         </li>
                         <li class="feature-item mb-2 d-flex align-items-start gap-2">
