--- a/src/contact.njk
+++ b/src/contact.njk
@@ -62,9 +62,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 col-md-10">
                 <div class="ratio ratio-4x3">
-                    <iframe
-                        src="https://docs.google.com/forms/d/e/1FAIpQLSeJd9-hHFKo6_3PYR-t-7qRoEjywTR6nckMC74j9WMyMRLMYA/viewform?embedded=true"
-                        marginwidth="0">Loading…</iframe>
+                    <iframe src="https://forms.gle/qASLJYMZ4VmgzvQUA" marginwidth="0">Loading…</iframe>
                 </div>
             </div>
         </div>
